fix indicator collapsing when repo name is too long

--- a/app/styles/ui/_repository-list.scss
+++ b/app/styles/ui/_repository-list.scss
@@ -70,7 +70,7 @@
 
     .change-indicator-wrapper {
       display: flex;
-      width: 12px;
+      min-width: 12px;
     }
 
     .ahead-behind {
